# Windows_PWDchange

./: .gitignore  LICENSE  README.md  build.bat  build.py  config.json  create_icon.py  main.py  pyproject.toml  requirements.txt  sample_config.json
app/: config_manager.py  logger.py  models.py  services.py  tray_manager.py
doc/: RELEASE_NOTES.md  config_instructions.txt  quick_start.md  troubleshooting.txt  user_guide.md
static/css/: styles.css
static/js/: password-validator.js
templates/: base.html  index.html  result.html
